--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -290,39 +290,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def single_stock_algorithm(predictions, df=df, capital=100_000, t_cost=1, short=False):\n",
+    "def single_stock_algorithm(predictions, capital=100_000, t_cost=1, short=False):\n",
     "    '''\n",
-    "    \n",
+    "    Can use predictions made on the X_test data set for a naive trading algorithm. \n",
+    "    If prediction > 0 it will buy the stock and if shorting is allowed will do the\n",
+    "    opposite. \n",
+    "\n",
+    "    Input:\n",
+    "        predictions: The predictions on the X_test data set to be used\n",
+    "        capital: How much capital is put into the stock (default 100.000)\n",
+    "        t_cost: transaction cost (default of 1)\n",
+    "        short: True if shorting is allowed and false (default) if not\n",
     "    '''\n",
-    "    rets = []\n",
+    "\n",
     "    num_trade = 0\n",
     "\n",
-    "    zipper = zip(df['Returns'], predictions)\n",
+    "    zipper = zip(y_test, predictions)\n",
     "\n",
     "    for ret, pred in zipper:\n",
     "        if pred > 0:\n",
     "            capital = (1 + ret) * capital - t_cost * 2\n",
-    "            rets.append(ret)\n",
     "            num_trade += 1\n",
     "        if short:\n",
     "            if pred < 0:\n",
     "                capital = (1 - ret) * capital - t_cost * 2\n",
-    "                rets.append(ret)\n",
     "                num_trade += 1\n",
     "\n",
     "    print('Waarde:', round(capital), 'Euro')\n",
     "    print('Winst:', int(capital) - 100_000, 'Euro')\n",
     "    print('Number of trades:', num_trade)\n",
-    "    print('Transaction cost:', num_trade * 2, end='\\n\\n')\n",
-    "\n",
-    "    return rets \n",
+    "    print('Transaction cost:', num_trade * t_cost * 2, end='\\n\\n')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Waarde: 119512 Euro\nWinst: 19511 Euro\nNumber of trades: 132\nTransaction cost: 264\n\n"
+    }
+   ],
+   "source": [
+    "single_stock_algorithm(rf_preds, short=True)"
    ]
   },
   {
@@ -353,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {
     "tags": []
    },
@@ -361,7 +382,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "feature  coefficient  absolute coef\n0  1_day_lag    10.757468      10.757468\n1  3_day_lag    10.227324      10.227324\n2  5_day_lag     9.738368       9.738368\n3  2_day_lag     9.653121       9.653121\n4  4_day_lag     9.387898       9.387898\n5  Intercept    17.154213      17.154213\n\nAverage error: 7.027\nR2-score of the model on the test data: -2.282\n"
+     "text": "feature  coefficient  absolute coef\n0  5_day_lag     0.099937       0.099937\n1  4_day_lag    -0.080981       0.080981\n2  3_day_lag    -0.074535       0.074535\n3  1_day_lag    -0.023523       0.023523\n4  2_day_lag    -0.004960       0.004960\n5  Intercept     0.000292       0.000292\n\nAverage error: 0.016\nR2-score of the model on the test data: -0.025\n"
     }
    ],
    "source": [
@@ -375,7 +396,7 @@
     "lm.fit(X_train, y_train)\n",
     "\n",
     "#predict using the test set and training set\n",
-    "pred_test = lm.predict(X_test)\n",
+    "lm_preds = lm.predict(X_test)\n",
     "\n",
     "#score the two predictions above\n",
     "score_test = r2_score(y_test, pred_test)\n",
@@ -435,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {
     "tags": []
    },
@@ -443,7 +464,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Average error: 0.016\nR2-score of the model on the test data: -0.008\n"
+     "text": "Average error: 0.017\nR2-score of the model on the test data: -0.063\n"
     }
    ],
    "source": [
