--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -802,7 +802,9 @@
    "source": [
     "# Results discussion and improvements\n",
     "\n",
-    "After testing the models and algorithms on a wide variety of stocks I can only come to the conclusion that buying and holding stocks is a way better strategy than trying to predict using the models and algorithms I used. The average profit from buy and hold is over 2 times that of the naive trading algorithm and the omodels are even worse. The models did however all result in a profit which was more than I had expected. Only the random forest model had more diverging results where sometimes the profit became negative. \n",
+    "The average profit from buy and hold is over 2 times that of the naive trading algorithm and the models are even worse. The models did however all result in a profit which was more than I had expected. Only the random forest model had more diverging results where sometimes the profit became negative. \n",
+    "\n",
+    "The classification models that only predict positive or negative returns show that its about 50/50 (slightly biassed to positive) whether returns will be positive or negative. This is evidence for the idea that short term stock returns are random.\n",
     "\n",
     "My results are not conclusive because of there are many more models who might be better at predicting than the models I used. Neural networks might be a good start for further research.\n",
     "\n",
