--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "In this notebook I try to find ways to make a simple trading algorithm that is profitable. In doing so I explore the characteristics of stock price behaviour. Parts of this notebook are designed for multiple stock data while others are designed for single stock data. Pick either of the following two cells and run the get_data function (3rd cell) to get started. \n",
-    "\n",
-    "The metrics I use to determine model/strategy succes is the profit it makes when used in the trading algorithm. I'm not very interested in R2 or other scores because in the end my goal is to make money."
+    "In this notebook I try to find ways to make a simple trading algorithm that is profitable. In doing so I explore the characteristics of stock price behaviour. Parts of this notebook are designed for multiple stock data while others are designed for single stock data. Pick either of the following two cells and run the get_data function (3rd cell) to get started. \n"
    ]
   },
   {
